fixed dropdown menu gap

--- a/app/assets/styles/components/dropdown-menu.scss
+++ b/app/assets/styles/components/dropdown-menu.scss
@@ -87,7 +87,7 @@
                 flex-direction: column;
                 display: flex;
                 width: 325px;
-                top: 65px;
+                top: 46px;
                 z-index: 100;
     
                 @include themed() {
